fix(theme): long words on small displays

--- a/themes/edjopato-hugo-theme/assets/style/single.scss
+++ b/themes/edjopato-hugo-theme/assets/style/single.scss
@@ -13,6 +13,10 @@
     max-width: 600px;
   }
 
+  * {
+    overflow-x: auto;
+  }
+
   img {
     max-width: 100%;
     display: block;
